# securepass-pro

./: .gitignore  LICENSE  README.md  common_passwords.py  controller.py  crypto_utils.py  gui.py  logic.py  main.py  pyproject.toml  requirements.txt  vault_manager.py
data/: passwords.vault  vault.verify
tests/: test_crypto.py  test_logic.py  test_vault.py
